# meta-extractor

./: README.md  finetuning_config_gemma3.yml  pdf-urls.csv  pyproject.toml  requirements-eval.txt  requirements-training.txt
notebooks/: train_model.ipynb
src/meta_extractor/: pdf_text_extractor.py
src/meta_extractor/data/: prompt_production.json
src/meta_extractor/training-gemma3/: train_test_val_set.py
src/meta_extractor/training-gemma3/example-data/: example-2.txt  example-3.json  example-5.json  example-6.txt  example-8.json  example-8.txt  schema.json
src/meta_extractor/training-gemma3/example-data/metadata/: example-6.json  example-7.json
src/meta_extractor/training-gemma3/example-data/metadata/train/: example-2.json
src/meta_extractor/training-gemma3/example-data/texts/: example-1.txt  example-4.txt
src/meta_extractor/training-gemma3/example-data/texts/test/: example-9.txt
src/meta_extractor/training-gemma3/example-data/texts/train/: example-3.txt  example-5.txt
src/meta_extractor/training_gemma3/: build_prompt.py  pdf2text.py
src/meta_extractor/training_gemma3/example-data/conversations/: conversations_test.jsonl  conversations_train.jsonl
src/meta_extractor/training_gemma3/example-data/metadata/test/: example-10.json  example-9.json
src/meta_extractor/training_gemma3/example-data/metadata/train/: example-1.json  example-4.json
src/meta_extractor/training_gemma3/example-data/texts/test/: example-10.txt
src/meta_extractor/training_gemma3/example-data/texts/train/: example-7.txt
